import { mount } from 'enzyme'
import * as React from 'react'

import { mockRouterProps } from '../../mocks/components'
import { ExternalLibraryName, ExternalLibraryNames } from '../assessment/assessmentShape'
import Playground, { IPlaygroundProps } from '../Playground'

const baseProps = {
  editorValue: '',
  isRunning: false,
  activeTab: 0,
  editorWidth: '50%',
  sideContentHeight: 40,
  sourceChapter: 2,
  externalLibraryName: ExternalLibraryNames.NONE,
  output: [],
  replValue: '',
  handleBrowseHistoryDown: () => {},
  handleBrowseHistoryUp: () => {},
  handleChangeActiveTab: (n: number) => {},
  handleChapterSelect: (chapter: number) => {},
  handleEditorEval: () => {},
  handleEditorValueChange: () => {},
  handleEditorWidthChange: (widthChange: number) => {},
  handleExternalSelect: (externalLibraryName: ExternalLibraryName) => {},
  handleGenerateLz: () => {},
  handleInterruptEval: () => {},
  handleReplEval: () => {},
  handleReplOutputClear: () => {},
  handleReplValueChange: (code: string) => {},
  handleSideContentHeightChange: (h: number) => {}
}

const testValueProps: IPlaygroundProps = {
  ...baseProps,
  ...mockRouterProps('/academy', {}),
  editorValue: 'Test value'
}

const playgroundLinkProps: IPlaygroundProps = {
  ...baseProps,
  ...mockRouterProps(
    '/playground#chap=4&ext=NONE&prgrm=CoUwzgLglgdg5gAhDAxgewCYgwgqgJQBkEIALWOAVwFsg',
    {}
  ),
  editorValue: 'This should not show up'
}

test('Playground renders correctly', () => {
  const app = <Playground {...testValueProps} />
  const tree = mount(app)
  expect(tree.debug()).toMatchSnapshot()
})

test('Playground with link renders correctly', () => {
  const app = <Playground {...playgroundLinkProps} />
  const tree = mount(app)
  expect(tree.debug()).toMatchSnapshot()
})
